@@ -4,7 +4,7 @@ Digital Clock project based on Java and JavaFX.
 
 ## Usage
 
-1. Launch the JAVA App (TBD) (see [Build And Run - Command Line](#build-and-run---command-line) below).
+1. Launch the JAVA App (TBD).
 2. The Digitial Clock appears on-screen at a set size. Use the corner or edge "handles" to change the clock size.
 3. Click the Digital Clock to set it to full screen mode.
 4. While in full-screen mode, click or press "X" on the keyboard to restore the window size to previous.
@@ -57,54 +57,74 @@ Notes:
 - JavaFX SDK can be downloaded separately and placed in a common folder where Java build can access its `lib` folder.
 - Other dependencies might be elsewhere in the local filesystem (such as the Java JDK). Take a peek at `JAVA_HOME` env variable or VS Code Extensions for a clue about where JDK has been installed and what version.
 
-## Prerequisites
+## Build and Run
 
-- Java Eclipse Adoptium JDK 17.0.6.10-hotspot.
-- JavaFX r.17 (Sept 2021) LTS. Requires JDK 11 or newer.
+### Prerequisites
+
+- Java Eclipse Adoptium JDK 21.
+- JavaFX (ensure it is a supported version for Java JDK version).
 - Extension Pack for Java (Microsoft).
 - Language Support for Java(TM) by Red Hat
 - JavaFX Support by Shrey Pandya (addresses a bug in Language Support for Java(TM) by Red Hat).
-- Settings.json includes library references to JavaFX.
-- Launch.json includes `vmArgs` to JavaFX Bin packages.
+- A basic understanding of Gradle.
 
-## Build and Run - VSCode
-
-1. Install Java JDK.
-1. Download JavaFX (ensure it is a supported version for Java JDK version).
-1. Install VSCode Extension Packs.
-1. Update VSCode settings and launch to ensure JavaFX libs are included.
-1. In VSCode, select `App.java` and click the Run command or the `play` triangle.
-
-## Build and Run - Command Line
+### VSCode - Windows
 
 Build:
 
-1. Decide where to place generated class files
-1. Get path to JavaFX bin directory.
-1. Get list of modules included in the Java project i.e. `javafx.fxml` etc.
-1. Find `DigitalClock.App` (the source code, usually in `src`).
-1. Execute `javac -d {GENERATED_CLASS_FILES_DIR} --module-path {JAVAFX_LIB_DIR} --add-modules {CSVLIST_OF_NAMED_JAVAFX_MODULES} --class-path .\src src\DigitalClock.java`
-
-_Note_: No output is good screen output in this case.
+1. Meet the prerequisites listed above.
+1. Open the Command Palette and type `Gradle: Refresh Gradle Projects View` and run the command. There should be no errors in the Output window.
+1. Open the Command Palette and type `Gradle: Run a Gradle Build` and run the command. If the Gradle Build succeeds, it will output Java Archive files (a ZIP and a TAR).
 
 Run:
 
-1. Find the generated `.class` file and CHDIR to that directory for simplicity.
-1. Execute `java --module-path {JAVAFX_BIN_DIR} --add-modules {LIST_OF_NAMED_JAVAFX_MODULES} DigitalClock`
+1. Build the app as described above.
+1. Open Run and Debug (Ctrl + Shift + D) and allow VSCode to generate build and run settings.
+1. Click the Green play button to run the app.
+
+### Command Line - Windows
+
+Build:
+
+1. Check that Java executable and version: `java --version`
+1. Execute `gradlew build`.
+1. View output files in the `distributions` directory.
+
+Run:
+
+1. Check that Java executable and version: `java --version`
+1. Download the pre-built Java Archive file (or see the `distributions` directory if you followed the Build instructions above).
+1. Extract the ZIP file contents to a new directory.
+1. Traverse the directory to find `bin\app.bat` and execute it to launch the Digital Clock.
+
+Under the covers this batch file executes `java.exe` with the `-classpath` arguments that point to all files in the extracted `lib` directory. So long as the prerequisites are met, the application should run.
 
 ## Publish and Deploy - Linux
 
 Linux:
 
 - Includes RaspberryPi OS Bookworm and other Debian derivatives.
-- Support for ARCH platform but _not_ support ARM (this is a NetBeans limitation).
+- Support for ARCH64 platform.
 
-Steps:
+1. Meet all prerequisites.
+1. Download the pre-built TAR and extract it.
+1. Execute `.app` in the shell to launch the Digital Clock.
 
-1. Install Java JDK 17 (see [References](#references) for details).
+---
+
+JAR:
+
+1. Start in the directory where `javac` output the build files to.
+1. Add necessary Library files. ???
+1. Create JAR: `jar --create --file=DigitalClock.jar --main-class=DigitalClock.class *.class`
+1. Execute the app: `java -jar DigitalClock.jar`
+
+Note about NetBeans to package this project in other ways:
+
+1. Install Java JDK 21 (see [References](#references) for details).
 1. Install SnapD: `sudo apt install snapd`, reboot, then `sudo snap install snapd`
 1. Install Apache NetBeans: `sudo snap install netbeans --classic`
-1. ...more TBD...
+1. Configure NetBeans Options including Libraries, SDK version, etc.
 
 ## References
 
@@ -115,4 +135,4 @@ Steps:
 - [Using GraalVM](https://www.graalvm.org/latest/reference-manual/native-image/guides/build-static-executables/)
 - [Using GraalVM Containers](https://www.graalvm.org/latest/reference-manual/native-image/guides/containerise-native-executable-and-run-in-docker-container/)
 - Adoptium.net [Instructions To Install Temurin to Linux](https://adoptium.net/installation/linux/) (a general prerequisite).
-- How to [Install NetBeans](https://snapcraft.io/install/netbeans/raspbian) (requires Java JDK v.17 or newer, Adoptium recommended).
+- How to [Install NetBeans](https://snapcraft.io/install/netbeans/raspbian) (requires Java JDK v.21 or newer, Adoptium recommended).
